kubernetes/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: test-container
      image: curlimages/curl
      command: [ "sleep", "3600" ]
